<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/fragment_home"
        style="@style/home_fragment"
        android:orientation="vertical"
        tools:context="com.example.ioanna.ayianapatourguide.HomeFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ayianapa" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                style="@style/label"
                android:text="@string/country" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                style="@style/label"
                android:text="@string/district" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                style="@style/label"
                android:text="@string/main_languages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages_values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                style="@style/label"
                android:text="@string/currency" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                style="@style/label"
                android:text="@string/local_time" />

            <DigitalClock
                android:id="@+id/clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/frg_home_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/text_home_fragment" />
    </LinearLayout>
</ScrollView>